[package]
name = "ptsb-plaintext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
chrono = "0.4.23"
thiserror = "1.0"
csv = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
